# ml-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
mlfs/: __init__.py
mlfs/classical/: __init__.py  clustering.py  ensemble.py  reduction.py
mlfs/nn/: __init__.py  activations.py  layers.py  losses.py  models.py  optim.py
mlfs/probabilistic/: __init__.py  em.py  sparse.py
mlfs/utils/: __init__.py  data.py  viz.py
notebooks/: 01_perceptron.ipynb  02_mlp.ipynb  03_cnn_mnist.ipynb  04_cnn_cifar.ipynb  05_kmeans.ipynb  06_spectral_clustering.ipynb  07_pca.ipynb  08_lle.ipynb  09_isomap.ipynb  10_ensemble.ipynb  11_em_algorithm.ipynb  12_face_detection.ipynb  13_sparse_coding.ipynb
