[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Machine Learning algorithms implemented from scratch with PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["machine-learning", "deep-learning", "pytorch", "from-scratch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "torchvision>=0.15",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0",
    "scikit-learn>=1.3",  # 비교 검증용
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlfs"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0",
    "scikit-learn>=1.3",
]
